Небольшие косметические изменения в коде, чтобы прога легче читалась